[tool.poetry]
name = "clickhouse-pool"
version = "0.5.3"
description = "a thread-safe connection pool for ClickHouse"
authors = ["Eric McCarthy <ericmccarthy7@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://ericmccarthy7.github.io/clickhouse-pool/"
repository = "https://github.com/ericmccarthy7/clickhouse-pool"

[tool.poetry.dependencies]
python = "^3.6.2"
clickhouse-driver = "^0.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
black = "^21.6b0"
pytest = "^6.2.4"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
